# anakin_library

./: .gitignore  Makefile  README.md  demo.py  main.py  model_card.md  pyproject.toml
demo/: demo.py
demo/prompt/: health_report_generator.md  monkey_health_assessment_prompt_V10.md  monkey_health_assessment_prompt_V10_multi_animal.md
src/: database_manager.py  preprocessing.py  video_manager.py
src/anakin_library/: __init__.py  embedding_loader.py  llm_manager.py  preprocessing.py  vector_db_client.py  video_manager.py
src/common/: config.py
src/embedding/: __init__.py  embedding_loader.py
src/llm_manager/: llm_manager.py
src/vector_db_manager/: __init__.py  vector_db_client.py
src/video_manager/: __init__.py  video_manager.py
